--- a/public/sass/layout/_navigation.scss
+++ b/public/sass/layout/_navigation.scss
@@ -103,34 +103,39 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    position: -webkit-sticky;
-    position: sticky;
+    // position: -webkit-sticky;
+    // position: sticky;
+    position: fixed;
+    justify-content: space-between; //display left right to the end and then middle evenly spaced between
     top: 0;
     left: 0;
     width: 100%;
-    -webkit-transition: all 0.5s ease-in 0s;
-    transition: all 0.5s ease-in 0s;
+    padding: 1rem 1%;
+    background-color: #ffffff;
+    -webkit-transition: all 0.5s ease-in 0.5s;
+    transition: all 0.5s ease-in 0.5s;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between; //display left right to the end and then middle evenly spaced between
-    background-color: #ffffff;
+  
     -webkit-box-shadow: 0 .2rem 1rem $color-grey-dark-2;
             box-shadow: 0 .2rem 1rem $color-grey-dark-2;
-    padding: 1rem 1%;
+    
     -webkit-transform: translateZ(0);
             transform: translateZ(0);
-    z-index: 9999;
+    // z-index: 9999;
     
 }
 .sticky .navigation { //Replace sticky with stuck for new Waypoint version
     padding: 1rem 10%;
-    -webkit-transition: all 0.5s ease-in 0s;
-            transition: all 0.5s ease-in 0s;
+    // width: 100%;
+    -webkit-transition: all 0.5s ease-in 0.5s;
+            transition: all 0.5s ease-in 0.5s;
     -webkit-transform: translateZ(0);
             transform: translateZ(0);
     z-index: 9999;
+
     &__item {
         padding-top: .5rem;
         &:first-child {
@@ -168,7 +173,7 @@
 
     @include respond(tab-port) { //"Burger" menu icon should appear only for phone and tablet portrait screen
         display: inline-block;
-        padding: 1rem 2rem 0 2rem;
+        padding: 2rem;
     }
 
     @include respond(phone) { //"Burger" menu icon should appear only for phone and tablet portrait screen
